# OpenGLEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  OpenGLEngine.sln  README.md  vcpkg.json
OpenGLEngine/: OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters
OpenGLEngine/Assets/Models/: cube.mtl
OpenGLEngine/Assets/Shaders/: SimpleShader.frag  SimpleShader.vert
OpenGLEngine/Engine/include/Audio/: AudioSystem.h
OpenGLEngine/Engine/include/Camera/: Camera.h  CameraMovement.h
OpenGLEngine/Engine/include/Ecs/Components/: AABB.h  CameraComponent.h  FpsControlComponent.h  MaterialComponent.h  MeshComponent.h  RigidbodyComponent.h  ShaderComponent.h  TransformComponent.h
OpenGLEngine/Engine/include/Ecs/Core/: ComponentPool.h  EcsSystems.h  EcsWorld.h  Entity.h  IEcsSystem.h
OpenGLEngine/Engine/include/Ecs/Systems/: CameraInputSystem.h  CameraMatrixSystem.h  PhysicSystem.h  RenderSystem.h  SimplePhysicSystem.h
OpenGLEngine/Engine/include/Engine/: Engine.h  OEngine.h
OpenGLEngine/Engine/include/Entity/: Entity.h  EntitySystem.h  OEntity.h  OEntitySystem.h
OpenGLEngine/Engine/include/Extension/: Extension.h  OExtension.h
OpenGLEngine/Engine/include/Input/: InputSystem.h
OpenGLEngine/Engine/include/Math/: Matrix4.h  OMath4.h  ORect.h  OVector2.h  OVector3.h  OVector4.h  Rect.h  Vector2.h  Vector3.h  Vector4.h
OpenGLEngine/Engine/include/Render/: ORenderEngine.h  OShaderProgram.h  OUniformBuffer.h  OVertexArrayObject.h  RenderEngine.h  ShaderProgram.h  Texture.h  UniformBuffer.h  UniformData.h  VertexArrayObject.h
OpenGLEngine/Engine/include/Resource/: ModelLoader.h
OpenGLEngine/Engine/include/Window/: OWindow.h  Window.h
OpenGLEngine/Engine/source/Audio/: AudioSystem.cpp
OpenGLEngine/Engine/source/Camera/: Camera.cpp  CameraMovement.cpp
OpenGLEngine/Engine/source/Ecs/Core/: EcsSystems.cpp  EcsWorld.cpp
OpenGLEngine/Engine/source/Engine/: Engine.cpp  OEngine.cpp
OpenGLEngine/Engine/source/Engine/Win32/: OWin32Engine.cpp  Win32Engine.cpp
OpenGLEngine/Engine/source/Entity/: Entity.cpp  EntitySystem.cpp  OEntity.cpp  OEntitySystem.cpp
OpenGLEngine/Engine/source/Input/: InputSystem.cpp
OpenGLEngine/Engine/source/Render/: ORenderEngine.cpp  OShaderProgram.cpp  OUniformBuffer.cpp  OVertexArrayObject.cpp  RenderEngine.cpp  ShaderProgram.cpp  Texture.cpp  UniformBuffer.cpp  VertexArrayObject.cpp
OpenGLEngine/Engine/source/Render/Win32/: OWin32RenderEngine.cpp  Win32RenderEngine.cpp
OpenGLEngine/Engine/source/Resource/: ModelLoader.cpp
OpenGLEngine/Engine/source/Window/: OWin32Window.cpp  Win32Window.cpp  Window.cpp
OpenGLEngine/Game/: ExampleGame.cpp  ExampleGame.h  MyGame.cpp  MyGame.h  Player.cpp  Player.h  main.cpp
OpenGLEngine/x64/Debug/: OpenGLEngine.exe.recipe  vc143.idb
OpenGLEngine/x64/Debug/OpenGLEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
scripts/: bootstrap-vcpkg.sh  configure.sh
